--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,15 @@ exclude: ["Gemfile", "Gemfile.lock", "LICENSE", "README.md"]
 # Theme settings
 remote_theme: just-the-docs/just-the-docs@v0.10.1
 color_scheme: light
-search_enabled: true
+search_enabled: false
 heading_anchors: true
+aux_links:
+  Brightspace:
+    - https://www.gradescope.com/
+  Gradescope:
+    - https://www.gradescope.com/
+  Ed:
+    - https://edstem.org/
 permalink: pretty
 head_custom: <script>document.addEventListener('DOMContentLoaded',function(){const e=document.querySelector('.search-input');e&&(e.placeholder='Search course content...');const t=document.querySelector('.site-title a')||document.querySelector('a.site-title')||document.querySelector('.site-header .site-title a');if(t){const path=window.location.pathname;const basePath=path.includes('/sp26/')?'/sp26':'/';t.href=basePath+'about/'}});</script>
 footer_content:
@@ -34,6 +41,7 @@ footer_content:
 collections:
   staffers:
   modules:
+  homeworks:
   schedules:
   announcements:
 # Default layouts for each collection type
@@ -51,6 +59,11 @@ defaults:
       type: modules
     values:
       layout: module
+  - scope:
+      path: ''
+      type: homeworks
+    values:
+      layout: homework
   - scope:
       path: ''
       type: schedules
